# copy-ami-tags.rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.sh
src/: main.rs
