[package]
name     = "copy-ami-tags-rs"
version  = "0.1.2"
authors  = ["Joseph Kordish <joe@unicornclouds.com>"]
readme   = "README.md"
license  = "The MIT License (MIT)"
keywords = [
  "aws",
  "ami",
  "packer"
]

[dependencies]
rusoto_core  = "0.32"
rusoto_ec2   = "0.32"
rusoto_sts   = "0.32"
serde_json   = "^1"
crossbeam    = "^0.3"
slog         = "2"
slog-term    = "2"
slog-async   = "2"
clippy       = { version="*", optional = true }

[features]
default=[]

[profile.release]
opt-level        = 3
codegen-units    = 1
