[package]
edition  = "2018"
name     = "copy-ami-tags-rs"
version  = "0.1.4"
authors  = ["Joseph Kordish <joe@unicornclouds.com>"]
readme   = "README.md"
license  = "The MIT License (MIT)"
autobins = false
keywords = [
  "aws",
  "ami",
  "packer"
]

[[bin]]
name = "copy-ami-tags"
path = "src/main.rs"

[dependencies]
rusoto_core  = "0.35"
rusoto_ec2   = "0.35"
rusoto_sts   = "0.35"
rusoto_credential = "*"
serde_json   = "^1"
crossbeam    = "^0.3"
slog         = "2"
slog-term    = "2"
slog-async   = "2"

[features]
default=[]

[profile.release]
codegen-units    = 1
opt-level        = 3
debug            = false
rpath            = false
lto              = true
debug-assertions = false
panic            = 'abort'
incremental      = false
overflow-checks  = false
